src/objects/ProductEventDirector__c.object
<CustomObject>
    <fields>
        <fullName>Adhoc_Events__c</fullName>
        <label>Adhoc Events</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BaseController__c</fullName>
        <label>BaseController</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HPP</fullName>
                </value>
                <value>
                    <fullName>BAA</fullName>
                </value>
                <value>
                    <fullName>MMR</fullName>
                </value>
                <value>
                    <fullName>CAA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>ProductEventDirector</relationshipLabel>
        <relationshipName>ProductEventDirector</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flow_Events__c</fullName>
        <label>Flow Events</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsMMR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsMMR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rewind_Events__c</fullName>
        <label>Rewind Events</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Version_No__c</fullName>
        <label>Version No</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>ProductEventDirector</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ProductEventDirector Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProductEventDirector</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>